# claude-nbexec

./: CLAUDE.md  README.md  install-skill.sh  main.py  pyproject.toml
.claude/skills/nbexec/: SKILL.md.template
.github/workflows/: ci.yml  publish.yml
src/nbexec/: paths.py  protocol.py
src/nbexec/cli/: client.py  daemon_cmds.py  exec_cmd.py  interrupt_cmd.py  main.py  session_cmds.py
src/nbexec/daemon/: process.py  server.py  state.py
src/nbexec/session/: diagnostics.py  manager.py  notebook.py
tests/: test_exec_notebook.py  test_server_disconnect.py
